--- a/Asset.UserInterfacelayer/LoginWindow.xaml
+++ b/Asset.UserInterfacelayer/LoginWindow.xaml
@@ -5,17 +5,55 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Asset"
         xmlns:Metro="clr-namespace:Arthas.Controls.Metro;assembly=Arthas"
-        xmlns:dxc="http://schemas.devexpress.com/winfx/2008/xaml/charts" xmlns:dxsps="http://schemas.devexpress.com/winfx/2008/xaml/spreadsheet" x:Name="loginWin" x:Class="Asset.LoginWindow"
+        xmlns:dxc="http://schemas.devexpress.com/winfx/2008/xaml/charts" 
+        xmlns:dxsps="http://schemas.devexpress.com/winfx/2008/xaml/spreadsheet" 
+        x:Name="loginWin" 
+        x:Class="Asset.LoginWindow"
         mc:Ignorable="d"
-        Title="登录" d:DesignWidth="350" d:DesignHeight="500" MinWidth="1" MinHeight="1" BorderThickness="1" WindowStyle="None">
+        Title="登录" d:DesignWidth="350" d:DesignHeight="500" MinWidth="1" MinHeight="1" BorderThickness="1" WindowStyle="None" Width="350" Height="500">
     <Grid>
-        <StackPanel>
-            <Metro:MetroImage Source="Resources/pic.jpg" Margin="30,20,30,20" />
-            <Metro:MetroTextBox x:Name="txtAcc" Text="" Title="" InputHint="用户名" PopupHint="用户名即工号" Margin="30,0,30,0" Icon="Resources/account.png" />
-            <Metro:MetroTextBox x:Name="txtPwd" Text="" Title="" InputHint="密码" Margin="30,0,30,0" Icon="Resources/password.png" Foreground="Transparent" FontFamily="Courier New"/>
-            <Metro:MetroTextBlock x:Name="txbError" Text="用户名或密码错误" Foreground="Red" Margin="30,10,30,10" Visibility="Hidden" />
-            <Metro:MetroButton x:Name="btnLogin" MetroButtonState="None" Content="登录" Margin="30,0,30,0" Click="BtnLogin_Click" />
-        </StackPanel>
+        <Metro:MetroTabControl>
+            <Metro:MetroTabItem x:Name="tabiLogin" Visibility="Collapsed">
+                <Grid>
+                    <StackPanel>
+                        <Metro:MetroImage Source="Resources/pic.jpg" Margin="30,20,30,20" />
+                        <Metro:MetroTextBox x:Name="txtAcc" Text="" Title="" InputHint="用户名" PopupHint="用户名即工号" Margin="30,0,30,0" Icon="Resources/account.png" />
+                        <Metro:MetroTextBox x:Name="txtPwd" Text="" Title="" InputHint="密码" Margin="30,0,30,0" Icon="Resources/password.png" Foreground="Transparent" FontFamily="Courier New"/>
+                        <Metro:MetroTextBlock x:Name="txbError" Text="用户名或密码错误" Foreground="Red" Margin="30,10,30,10" Visibility="Hidden" />
+                        <Metro:MetroButton x:Name="btnLogin" MetroButtonState="None" Content="登录" Margin="30,0,30,0" Click="BtnLogin_Click" />
+                        <TextBlock x:Name="linkRegistered" HorizontalAlignment="Center" Margin="0,10,0,0" PreviewMouseLeftButtonDown="LinkRegistered_PreviewMouseLeftButtonDown">
+                            <Hyperlink>
+                                <Run Text="注册"/>
+                            </Hyperlink>
+                        </TextBlock>
+                    </StackPanel>
+                </Grid>
+            </Metro:MetroTabItem>
+            <Metro:MetroTabItem x:Name="tabiRegistered" Visibility="Collapsed">
+                <Grid>
+                    <StackPanel>
+                        <TextBlock x:Name="linkLogin" HorizontalAlignment="Left" Margin="5,5,5,5" PreviewMouseLeftButtonDown="LinkLogin_PreviewMouseLeftButtonDown">
+                            <Hyperlink>
+                                <Run Text="返回登录"/>
+                            </Hyperlink>
+                        </TextBlock>
+                        <Metro:MetroImage Source="Resources/pic.jpg" Margin="30,0,30,20" />
+                        <Metro:MetroTextBox x:Name="mtbUserAccount"  Text="" Title="" InputHint="用户名" PopupHint="用户名即工号" Margin="30,0,30,0" Icon="Resources/account.png" />
+                        <Metro:MetroTextBox x:Name="mtbUserPassword"  Text="" Title="" InputHint="密码" Margin="30,0,30,0" Icon="Resources/password.png" Foreground="Transparent" FontFamily="Courier New"/>
+                        <Metro:MetroTextBox x:Name="mtbJobPosition"  Text="" Title="" InputHint="职称" Margin="30,0,30,0" />
+                        <Metro:MetroTextBox x:Name="mtbContactor"  Text="" Title="" InputHint="真实姓名" Margin="30,0,30,0" />
+                        <Metro:MetroTextBox x:Name="mtbTel"  Text="" Title="" InputHint="联系电话" Margin="30,0,30,0" />
+                        <StackPanel Orientation="Horizontal" Margin="30,0,30,0">
+                            <Metro:MetroTextBlock Text="所属部门" Opacity="0.15" VerticalAlignment="Center" Margin="0,0,3,0"/>
+                            <ComboBox x:Name="cbxDivisionID" VerticalAlignment="Center" Margin="0,0,0,0" MinWidth="50" IsEditable="True" Width="110" SelectionChanged="CbxDivisionID_SelectionChanged"/>
+                            <ComboBox x:Name="cbxDepartmentID" VerticalAlignment="Center" Margin="0,0,0,0" MinWidth="50" IsEditable="True" Width="110"/>
+                        </StackPanel>
+                        <Metro:MetroTextBlock x:Name="txbErr"  Text="用户名或密码错误" Foreground="Red" Margin="30,5,30,5" Visibility="Hidden" />
+                        <Metro:MetroButton x:Name="btnRegistered"  MetroButtonState="None" Content="注册" Margin="30,0,30,0" Click="BtnRegistered_Click" />
+                    </StackPanel>
+                </Grid>
+            </Metro:MetroTabItem>
+        </Metro:MetroTabControl>
     </Grid>
 </Metro:MetroWindow>
 
