--- a/Asset.UserInterfacelayer/LoginWindow.xaml
+++ b/Asset.UserInterfacelayer/LoginWindow.xaml
@@ -16,7 +16,7 @@
             <Metro:MetroTabItem x:Name="tabiLogin" Visibility="Collapsed">
                 <Grid>
                     <StackPanel>
-                        <Metro:MetroImage Source="Resources/pic.jpg" Margin="30,20,30,20" />
+                        <Metro:MetroImage Source="Resources/固定资产.png" Margin="30,20,30,20" />
                         <Metro:MetroTextBox x:Name="txtAcc" Text="" Title="" InputHint="用户名" PopupHint="用户名即工号" Margin="30,0,30,0" Icon="Resources/account.png" />
                         <Metro:MetroTextBox x:Name="txtPwd" Text="" Title="" InputHint="密码" Margin="30,0,30,0" Icon="Resources/password.png" Foreground="Transparent" FontFamily="Courier New"/>
                         <Metro:MetroTextBlock x:Name="txbError" Text="用户名或密码错误" Foreground="Red" Margin="30,10,30,10" Visibility="Hidden" />
@@ -37,12 +37,12 @@
                                 <Run Text="返回登录"/>
                             </Hyperlink>
                         </TextBlock>
-                        <Metro:MetroImage Source="Resources/pic.jpg" Margin="30,0,30,20" />
+                        <Metro:MetroImage Source="Resources/固定资产.png" Margin="30,0,30,20" />
                         <Metro:MetroTextBox x:Name="mtbUserAccount"  Text="" Title="" InputHint="用户名" PopupHint="用户名即工号" Margin="30,0,30,0" Icon="Resources/account.png" />
                         <Metro:MetroTextBox x:Name="mtbUserPassword"  Text="" Title="" InputHint="密码" Margin="30,0,30,0" Icon="Resources/password.png" Foreground="Transparent" FontFamily="Courier New"/>
-                        <Metro:MetroTextBox x:Name="mtbJobPosition"  Text="" Title="" InputHint="职称" Margin="30,0,30,0" />
-                        <Metro:MetroTextBox x:Name="mtbContactor"  Text="" Title="" InputHint="真实姓名" Margin="30,0,30,0" />
-                        <Metro:MetroTextBox x:Name="mtbTel"  Text="" Title="" InputHint="联系电话" Margin="30,0,30,0" />
+                        <Metro:MetroTextBox x:Name="mtbJobPosition"  Text="" Title="" InputHint="职称" Margin="30,0,30,0" Icon="Resources/JobPosition.png"/>
+                        <Metro:MetroTextBox x:Name="mtbContactor"  Text="" Title="" InputHint="真实姓名" Margin="30,0,30,0" Icon="Resources/Contactor.png" />
+                        <Metro:MetroTextBox x:Name="mtbTel"  Text="" Title="" InputHint="联系电话" Margin="30,0,30,0" Icon="Resources/Tel.png" />
                         <StackPanel Orientation="Horizontal" Margin="30,0,30,0">
                             <Metro:MetroTextBlock Text="所属部门" Opacity="0.15" VerticalAlignment="Center" Margin="0,0,3,0"/>
                             <ComboBox x:Name="cbxDivisionID" VerticalAlignment="Center" Margin="0,0,0,0" MinWidth="50" IsEditable="True" Width="110" SelectionChanged="CbxDivisionID_SelectionChanged"/>
