--- a/Asset.UserInterfacelayer/MainWindow.xaml
+++ b/Asset.UserInterfacelayer/MainWindow.xaml
@@ -499,12 +499,12 @@
                         <Metro:MetroTabItem x:Name="tabpPrintCard" Header="打印标识卡" >
                             <Grid>
                                 <Metro:MetroScrollViewer>
-                                    <StackPanel>
+                                    <StackPanel x:Name="stPrint" Orientation="Horizontal">
                                         <ItemsControl x:Name="myItemsControl">
                                             <ItemsControl.ItemTemplate>
                                                 <DataTemplate>
                                                     <Border  BorderBrush="Black" BorderThickness="1">
-                                                        <StackPanel Width="300" Height="150">
+                                                        <StackPanel Width="300" Height="250">
                                                             <TextBlock Text="武汉工商学院" HorizontalAlignment="Center" FontSize="16" Foreground="#FF005DFF"/>
                                                             <StackPanel Orientation="Horizontal">
                                                                 <TextBlock Text="资产编码" HorizontalAlignment="Center" Margin="0,0,5,0"/>
@@ -534,6 +534,7 @@
                                                                 <TextBlock Text="保管人员"   HorizontalAlignment="Center" Margin="0,0,5,0"/>
                                                                 <TextBlock Text="{Binding Contactor}"   HorizontalAlignment="Center"/>
                                                             </StackPanel>
+                                                            <Metro:MetroImage Source="{Binding StorageSites}" Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                                                         </StackPanel>
                                                     </Border>
                                                 </DataTemplate>
@@ -551,6 +552,9 @@
                                                 </Style>
                                             </ItemsControl.ItemContainerStyle>
                                         </ItemsControl>
+                                        <StackPanel>
+                                            <Metro:MetroButton x:Name="btPrint" MetroButtonState="None" Content="打印" Click="BtPrint_Click" />
+                                        </StackPanel>
                                     </StackPanel>
                                 </Metro:MetroScrollViewer>
                             </Grid>
