--- a/Asset.UserInterfacelayer/MainWindow.xaml
+++ b/Asset.UserInterfacelayer/MainWindow.xaml
@@ -506,7 +506,7 @@
                                                 <DataTemplate>
                                                     <Border  BorderBrush="Black" BorderThickness="1">
                                                         <StackPanel Width="300" Height="250">
-                                                            <TextBlock Text="武汉工商学院" HorizontalAlignment="Center" FontSize="16" Foreground="#FF005DFF"/>
+                                                            <TextBlock Text="杰杰物联网公司" HorizontalAlignment="Center" FontSize="16" Foreground="#FF005DFF"/>
                                                             <StackPanel Orientation="Horizontal">
                                                                 <TextBlock Text="资产编码" HorizontalAlignment="Center" Margin="0,0,5,0"/>
                                                                 <TextBlock Text="{Binding AssetsCoding}"   HorizontalAlignment="Center"/>
